--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 body{
 margin:0;
+padding:0;
 font-family:"Merriweather Sans",sans-serif;
+}
+
+.pagina{
+color:white;
 }
 
 .container{
@@ -8,199 +13,122 @@ position:relative;
 min-height:100vh;
 }
 
-/*hoofd van de pagina*/
-.tabbladen{
-position:static;
+.header{
 background-color:#BFBD1D;
-width:100%;
-height:180px;
-margin:0;
-padding:0;
+width:100em;
+height:20em;
 }
 
 .logo{
-position:absolute;
 background-image:url(../images/logo.png);
 background-size:contain;
 background-repeat:no-repeat;
-left:50px;
-top:80px;
-width:400px;
-height:300px;
+position:relative;
+left:2em;
+top:2em;
+width: 20em;
+height: 20em;
 }
 
-.navmenu{
-position:absolute;
+.menu{
 background-image:url(../images/nav.png);
 background-size:contain;
 background-repeat:no-repeat;
-right:50px;
-top:80px;
-width:250px;
-height:240px;
-}
-
-.balk{
-position:absolute;
-top:280px;
-width:100%;
-height:600px;
-background-color:#BFBD1D;
-margin:0;
-padding:0;
-z-index:1;
-visibility:hidden;
-}
-
-li{
 position:relative;
-top:300px;
-left:-350px;
-width:500px;
-font-size:50px;
-font-weight:500;
-list-style:none;
-z-index:2;
-line-height:100px;
-}
-
-.pagina{
-color:white;
+right:-60em;
+top:-15em;
+width: 10em;
+height:10em;
 }
 
 .dropdown{
 visibility:hidden;
 }
 
-.navmenu:hover .dropdown{
+li{
+position:relative;
+left:-4em;
+text-align:center;
+font-size:3em;
+list-style:none;
+line-height:2em;
+z-index:2;
+}
+
+.balk{
+visibility:hidden;
+background-color:#BFBD1D;
+position:relative;
+top:-40em;
+width:100em;
+height:50em;
+z-index:1;
+}
+
+.menu:hover ~.balk{
 visibility:visible;
 }
 
-.navmenu:hover ~ .balk{
+.menu:hover ~.dropdown{
 visibility:visible;
 }
 
-/*Midden van de pagina*/
 .tekst{
 position:relative;
-top: 2vh;
-width:900px;
-margin-left:30px;
-text-align:left;
-margin-bottom:100px;
+top:2em;
+width:60em;
+margin-left:10em;
 }
 
-h1{
-
-}
-
-p{
-font-size:15px;
-line-height:60px;
-text-align:left;
-}
-
-#lijst{
-position:static;
-list-style:disc;
-color:#BFBD1D;
-font-size:15px;
-margin-top:10px;
-}
-
-/* einde van de pagina */
 footer{
 position:relative;
-background-color:#4E4D32;
-height:500px;
+margin-top:20em;
 bottom:0;
-width:100%;
-overflow:hidden;
-margin:0;
+background-color:#4E4D32;
+width:100em;
+height:40em;
 }
 
 .fb{
-position:relative;
-width:150px;
-height:150px;
 background-image:url(../images/FB.png);
 background-size:contain;
+background-repeat:no-repeat;
+position:relative;
+top:1em;
+left:1em;
+width: 8em;
+height:8em;
 }
 
 .mail{
-position:relative;
-width:150px;
-height:150px;
 background-image:url(../images/mail.png);
 background-size:contain;
+background-repeat:no-repeat;
+position:relative;
+top:1em;
+left:1em;
+width: 8em;
+height:8em;
 }
 
 .west{
 position:relative;
-left: 250px;
-top:-300px;
+top: -15em;
+left: 30em;
 }
 
 .oost{
 position:relative;
-left: 250px;
-top:-200px;
+top:-10em;
+left: 30em;
 }
 
 h2{
-font-size:40px;
+font-size:3em;
 color:#BFBD1D;
 }
 
-#voet{
-font-size:40px;
-line-height:5px;
+.voet{
+font-size:2em;
 color:white;
-}
-
-/*vanaf schermbreedte 400px */
-@media only screen and (min-width: 400px) {
-
-/*hoofd van de pagina*/
-.tabbladen{
-position:static;
-background-color:#BFBD1D;
-width:100%;
-height:300px;
-margin:0;
-padding:0;
-}
-
-.logo{
-position:absolute;
-background-image:url(../images/logo.png);
-background-size:contain;
-background-repeat:no-repeat;
-left:50px;
-top:50px;
-width:400px;
-height:300px;
-}
-
-.navmenu{
-position:absolute;
-background-image:url(../images/nav.png);
-background-size:contain;
-background-repeat:no-repeat;
-right:50px;
-top:50px;
-width:250px;
-height:240px;
-}
-
-}
-
-/*vanaf schermbreedte 720px */
-@media only screen and (min-width: 720px) {
-
-
-
-
-
-
 }
