--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body{
 margin:0;
 padding:0;
 font-family:"Merriweather Sans",sans-serif;
+overflow-x:hidden;
 }
 
 .pagina{
@@ -10,7 +11,7 @@ color:white;
 
 .container{
 position:relative;
-min-height:100vh;
+min-height:100em;
 }
 
 .header{
@@ -78,15 +79,17 @@ position:relative;
 top:2em;
 width:60em;
 margin-left:10em;
+margin-bottom:10em;
 }
 
 footer{
 position:relative;
-margin-top:20em;
 bottom:0;
 background-color:#4E4D32;
 width:100em;
 height:40em;
+overflow:hidden;
+margin:0;
 }
 
 .fb{
