--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,16 @@ font-family:"Merriweather Sans",sans-serif;
 overflow-x:hidden;
 }
 
+.banners{
+visibility:hidden;
+}
+
 .pagina{
 color:white;
+}
+
+.headtekst{
+visibility:hidden;
 }
 
 .container{
@@ -61,9 +69,9 @@ z-index:2;
 visibility:hidden;
 background-color:#BFBD1D;
 position:relative;
-top:-40em;
+top:-64em;
 width:100em;
-height:50em;
+height:75em;
 z-index:1;
 }
 
@@ -77,7 +85,7 @@ visibility:visible;
 
 .tekst{
 position:relative;
-top:2em;
+top:-20em;
 width:60em;
 margin-left:10em;
 height:90em;
@@ -175,7 +183,7 @@ z-index:2;
 
 .tekst{
 position:relative;
-top:2em;
+top:-15em;
 width:60em;
 margin-left:12em;
 height:90em;
@@ -208,11 +216,302 @@ z-index:2;
 
 .tekst{
 position:relative;
-top:2em;
+top:-15em;
 width:60em;
 margin-left:17em;
 height:90em;
 margin-bottom:10em;
 }
 
+}
+
+@media only screen and (min-width:720px){
+.menu{
+visibility:hidden;
+}
+
+.dropdown{
+visibility:hidden;
+}
+
+.headtekst{
+visibility:visible;
+position:absolute;
+top:4em;
+font-size:2.5em;
+right:-20em;
+}
+
+th{
+padding-left:2em;
+}
+
+h1{
+font-size:4em;
+}
+
+.tekst{
+position:relative;
+top:2em;
+width:70em;
+margin-left:13em;
+height:90em;
+margin-bottom:10em;
+}
+
+.banners{
+visibility:visible;
+width:100em;
+height:35em;
+}
+
+.epc{
+background-image:url(../images/EPC2.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:7em;
+top:-5em;
+width:25em;
+height:35em;
+border-radius:3em;
+}
+
+.airco{
+background-image:url(../images/Aircokeuring2.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:37em;
+top:-43em;
+width:25em;
+height:35em;
+border-radius:3em;
+}
+
+.plaatsbeschrijving{
+background-image:url(../images/Plaatsbeschrijving2.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:67em;
+top:-81em;
+width:25em;
+height:35em;
+border-radius:3em;
+}
+
+h1{
+font-size:3em;
+}
+
+p{
+font-size:2em;
+}
+
+.lijst{
+font-size:3em;
+}
+
+.tekst{
+margin-bottom:-15em;
+}
+
+footer{
+margin-top:0;
+}
+
+h2{
+font-size:3em;
+}
+
+.voet{
+font-size:2em;
+}
+
+footer{
+height:50em;
+}
+
+.inbanners{
+position:relative;
+top:5em;
+color:white;
+font-weight:700;
+font-size:3em;
+}
+
+}
+
+@media only screen and (min-width:800px){
+.headtekst{
+visibility:visible;
+position:absolute;
+top:4em;
+font-size:2.5em;
+right:-17em;
+}
+
+}
+
+@media only screen and (min-width:900px){
+.headtekst{
+visibility:visible;
+position:absolute;
+top:4em;
+font-size:2.5em;
+right:-15em;
+}
+
+}
+
+@media only screen and (min-width:1024px){
+.container{
+margin:0;
+}
+
+.header{
+height:12em;
+}
+
+.logo{
+background-image:url(../images/logo.png);
+background-size:contain;
+background-repeat:no-repeat;
+position:relative;
+left:1em;
+top:1em;
+width: 13em;
+height: 13em;
+}
+
+.headtekst{
+visibility:visible;
+position:absolute;
+top:4em;
+font-size:1em;
+right:3em;
+}
+
+.epc{
+background-image:url(../images/EPC.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:15em;
+top:-5em;
+width:18em;
+height:25em;
+border-radius:1em;
+}
+
+.airco{
+background-image:url(../images/Aircokeuring.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:37.5em;
+top:-32em;
+width:18em;
+height:25em;
+border-radius:1em;
+}
+
+.plaatsbeschrijving{
+background-image:url(../images/Plaatsbeschrijving.png);
+background-size:cover;
+background-repeat:no-repeat;
+position:relative;
+left:60em;
+top:-59em;
+width:18em;
+height:25em;
+border-radius:1em;
+}
+
+.inbanners{
+font-size:2em;
+}
+
+h1{
+font-size:2em;
+}
+
+.tekst{
+position:relative;
+top:-13em;
+margin-bottom:0;
+height:15em;
+}
+
+p{
+font-size:1em;
+}
+
+.lijst{
+font-size:1em;
+}
+
+footer{
+position:relative;
+}
+
+.fb{
+height:3em;
+width:3em;
+}
+
+.mail{
+height:3em;
+width:3em;
+}
+
+h2{
+font-size:1em;
+}
+
+.voet{
+font-size:1em;
+}
+
+.west{
+position:relative;
+top:-5em;
+}
+
+.oost{
+position:relative;
+top: -14em;
+left: 50em;
+}
+
+footer{
+position:relative;
+bottom:0;
+height:15em;
+margin-top:5em;
+}
+
+.epc:hover{
+background-image:url(../images/EPC2.png);
+background-size:cover;
+background-repeat:no-repeat;
+}
+
+.airco:hover{
+background-image:url(../images/Aircokeuring2.png);
+background-size:cover;
+background-repeat:no-repeat;
+}
+
+.plaatsbeschrijving:hover{
+background-image:url(../images/Plaatsbeschrijving2.png);
+background-size:cover;
+background-repeat:no-repeat;
+}
+
+.lijst{
+position:relative;
+left:-1em;	
+}
 }
